kubernetes/apps/monitoring-system/grafana/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.noirprime.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name grafana
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: grafana.png
    gethomepage.dev/name: Grafana
    gethomepage.dev/group: Observability
spec:
  hostnames: ["grafana.noirprime.com"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: *name
          namespace: monitoring-system
          port: 80
